# CMake-apprentisage

./: CMakeLists.txt  CMakeSettings.json  CMakeUserPresets.json  Doxyfile  main.cpp
.github/workflows/: cmake-single-platform.yml
html/: _p_c_h_8hpp_source.html  doxygen_crawl.html  files.html  files_dup.js  navtreedata.js  navtreeindex0.js
latex/: _p_c_h_8hpp_source.tex  files.tex  refman.tex
mathlib/: CMakeLists.txt
mathlib/src/: test.cpp
